commit 5f20e4f3f7e1dc3199888e9004d91b835a78f302
Author: Peter Bennett <pbennett@mythtv.org>
Date:   Wed May 9 19:22:44 2018 -0400

    configure: new version of freetype2 does not support freetype-config
    
    freetype2 v2.9.1 uses only pkgconfig and removes support for freetype-config
    
    Fixes #13262

commit c2fa4ba7981032edf6dcafec90d1e64a8139144b
Author: David Hampton <mythtv@love2code.net>
Date:   Mon May 7 22:58:04 2018 -0400

    Fix crash in ProgramMapTable::Create
    
    Abort in libmythtv due to accessing beyond the size of the vector.
    
    With at least some recording sources (I am using an OCUR device) it is
    apparently possible to end up having zero descriptors in the stream
    when ProgramMapTable::Create is called, but GCC 8 (and libstdc++) now
    includes AddressSanitizer integration for std::vector, detecting
    out-of-range accesses to a vector, which means that referencing the
    0th element is now an error (and an abort) even though the called code
    would not typically copy any data.
    
    Patch from Gary Buhrmaster, fixes #13263.
    
    (cherry picked from commit 7f00642ba11eb0d9d633a23ce74e5b695c05153e)

commit 81d2fb020fd1e6e5c1114ff3e6c02f2e33a78188
Author: David Hampton <mythtv@love2code.net>
Date:   Mon May 7 19:45:09 2018 -0400

    Fix crash (abort) in MythSocket::ResetReal
    
    In libmythbase mythsocket.cpp MythSocket::ResetReal there can be cases
    where there are no bytes to available to read, so the vector is never
    resized to greater than zero, which results in an abort when
    referencing the 1st (non-existant) element which is now checked by
    gcc8 (libstdc++).
    
    Patch from Gary Buhrmaster, fixes #13264.
    
    (cherry picked from commit 1f78097f0cef0ca15e1b7eee4e94fd17ca3b07b7)

commit 280138b452c16c3ce02734b57d9245f91002af81
Author: David Engel <dengel@mythtv.org>
Date:   Wed Apr 25 16:40:24 2018 -0500

    Stop active EIT scans from interfering with recordings
    